# Test-Rag

./: .env.example  .gitignore  ADVANCED_FEATURES_SUMMARY.md  ANALISI_SPECIALIZZATE.md  Analisi ChatGPT.md  BUGFIX_PDF_VIEWER.md  CLAUDE.md  DASHBOARD_UPDATES_GUIDE.md  DATABASE_EXPLORER.md  DOCUMENTAZIONE_AGGIORNATA.md  Dockerfile  Dockerfile.uv  FIX_ENCODING_QDRANT.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  README.md  README_CSV_SUPPORT.md  RELAZIONE_SISTEMI_AUTENTICAZIONE.md  RLS_IMPLEMENTATION_COMPLETE.md  SECURITY_FIX_LOG.md  analisi.md  analisi_multitenant.md  api.py  app.py  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.scaling.yml  docker-compose.yml  fix_metadata_paths.py  fix_qdrant.py  gen_prompt.py  pdf_viewer_demo.py  prossimi step.md  pyproject.toml  recreate_qdrant_collection.py  setup_performance.py  spiegazione_file_temporanei.md  start.bat  start.sh  start_api.bat  (+32 more)
.claude/: settings.local.json
CSV_esempi/: esempio_bilancio.csv  esempio_prodotti.csv  esempio_trimestrale.csv  esempio_utile.csv  esempio_vendite.csv
Da_Studiare/: bilancio.json  index.html
Da_Studiare/Bcdc/: bcdc.html  bcdc.json  prova_bcdc.json
Da_Studiare/Bcdc2/: bcdc2.html  bcdc2.json
Da_Studiare/Fatturato/: fatturato.html  fatturato.json
Da_Studiare/Magazzino/: Magazzino.html  Magazzino.json
Da_Studiare/bilancio/: bilancio.html  index.html
Da_Studiare/bilancio3/: bilancio3.html  bilancio3_data.json
Da_Studiare/cashflow/: cashflow.html  cashflow.json
Da_Studiare/cashflow_2/: cashflow.html  cashflow_data.json
Da_Studiare/commesse/: commesse.html  commesse.json  commesse_produzione.json
Da_Studiare/cost_center/: cost_center.html  cost_center_data.json
Da_Studiare/executive/: executive.html  executive_data.json
Da_Studiare/inventory/: inventory.html  inventory_data.json
Da_Studiare/marginalita/: marginalita.html  marginalita.json
Da_Studiare/production/: production.html  production_data.json
Da_Studiare/profitability/: profitability.html  profitability_data.json
Da_Studiare/project_management/: projects.html  projects_data.json
Da_Studiare/revenue/: revenue.html  revenue_data.json
Da_Studiare/salesforce/: sales_data.json  salesforce.html
Da_Studiare/scad/: drill.json  old.html  scad.html  scad.json
benchmarks/: benchmark_runner.py  gold_standard_config.yaml
components/: __init__.py  audio_overview_widget.py  security_ui.py
config/: __init__.py  dimensional_coherence_rules.yaml  enhanced_features.yaml  settings.py
config/ontology/: financial_metrics.yaml
dash_b/: README.md  VOICE_SETUP.md  angular.json  package-lock.json  package.json
dash_b/src/: index.html  styles.scss
dash_b/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
dash_b/src/environments/: environment copy.ts  environment.prod.ts  environment.ts
docs/: ANALISI_CONTENUTO.md  ARCHITETTURA_ENTERPRISE.md  Celery.md  Flower.md  GENERAZIONE_FAQ.md  GUIDA_DEPLOYMENT.md  GUIDA_RAPIDA_UTENTE.md  PERFORMANCE_OPTIMIZATION.md  PORRE_DOMANDE.md  PROCEDURA_ANALISI_DOCUMENTO.md  PROCEDURA_DOMANDA_RISPOSTA.md  PROCEDURA_GENERAZIONE_FAQ.md  PROCEDURA_UPLOAD_FILE.md  README.md  README_API.md  RELEASE_NOTES_GENNAIO_2025.md  RIFERIMENTO_ONTOLOGIE.md  Redis.md  UI_UX_ADVANCED.md  database_concurrency_fix.md  guida_completa.md  implementazione_celery.md
examples/: simple_test_new_features.py  test_new_features.py
frontend_angular/: README.md  angular.json  package-lock.json  package.json
frontend_angular/src/app/: app.component.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.ts
nginx/: nginx.conf
pages/: 00_🔐_Login.py  01_🛡️_Security_Dashboard.py  05_🎨_Custom_Dashboard.py  06_📊_Advanced_Export.py  1_📊_Analytics_Dashboard.py  2_🔍_Document_Preview.py  3_✏️_Interactive_Editor.py
scripts/: deploy_performance.bat  deploy_performance.sh
services/: __init__.py  audio_overview_service.py  contextual_retrieval_service.py  csv_analyzer.py  format_helper.py  italian_parser.py  llm_service.py  prompt_router.py  query_cache.py  rag_engine.py  reranking_service.py  secure_rag_engine.py
src/: __init__.py
src/application/interfaces/: __init__.py  csv_analyzer_interface.py  llm_service_interface.py  rag_engine_interface.py  repository_interfaces.py
src/application/parsers/: excel_parser.py  html_xml_parser.py  pdf_table_extractor.py  pdf_table_extractor.py.tmp.27384.1757336498561
src/application/services/: advanced_enterprise_orchestrator.py  analytics_dashboard.py  calculation_engine.py  currency_converter.py  data_normalizer.py  document_preview.py  document_router.py  enterprise_orchestrator.py  enterprise_orchestrator.py.tmp.19144.1757194770798  format_parsers.py  hybrid_retrieval.py  hyde_retriever.py  interactive_editor.py  ontology_mapper.py  ontology_mapper.py.tmp.27384.1757336775058  openai_realtime.py  pdf_processor.py  raw_blocks_extractor.py  report_scheduler.py  streaming_rag.py  table_analyzer.py
src/config/: financial_ontology_extended.yaml
src/core/: __init__.py  config.py  dependency_injection.py  logging_config.py
src/core/security/: __init__.py  access_control.py  authentication.py  multi_tenant_manager.py  sec_utils.py  user_context.py
src/domain/entities/: __init__.py  analysis_result.py  document.py  financial_data.py  tenant_context.py
src/domain/exceptions/: __init__.py  business_exceptions.py
src/domain/services/: calculation_engine.py  data_quality_service.py  dimensional_validator.py  granular_provenance_service.py
src/domain/value_objects/: __init__.py  data_lineage.py  date_range.py  guardrails.py  money.py  percentage.py  source_reference.py
src/infrastructure/orchestration/: prefect_flows.py
src/presentation/api/: auth.py  (+5 more)
tests/: __init__.py  conftest.py  test_excel_parser.py  test_hyde_benchmark.py  test_performance.py  test_raw_blocks_extractor.py  test_rls_functionality.py
tests/integration/: test_end_to_end.py
tests/unit/: test_entities.py  test_repositories.py  test_value_objects.py
utils/: README_DATABASE_RESET.md  database_reset.py  reset_databases.bat  reset_databases.sh
(+77 files in other folders)
