[project]
name = "business-intelligence-rag"
version = "1.0.0"
description = "Business Intelligence RAG System with CSV analysis and document processing"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "streamlit>=1.29.0",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "plotly>=5.18.0",
    
    # LlamaIndex and RAG
    "llama-index>=0.9.29",
    "llama-index-vector-stores-qdrant>=0.1.3",
    "llama-index-llms-openai>=0.1.5",
    "llama-index-embeddings-openai>=0.1.6",
    
    # Vector Store
    "qdrant-client>=1.7.0",
    
    # LLM
    "openai>=1.6.1",
    
    # Document Processing
    "pypdf>=3.17.4",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",
    
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "config"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = ["E501"]
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"